<resources>
    <string name="app_name">ActivitiesAndFragments</string>
    <string name="activity">Activity</string>
    <string name="fragment">Fragment</string>
    <string name="nombre">name</string>
    <string name="apellidos">Surname</string>
    <string name="password">Password</string>
    <string name="show">Show</string>
    <string name="youtube">Youtube</string>
    <string name="email">E-mail</string>
    <string name="changeFragment">Change fragment</string>
    <string name="mapas">Maps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
