<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="top|center"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fernana6.activitiesandfragments.fragment.FragmentBotones1">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btnEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <Button
        android:id="@+id/btnYoutube"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youtube"/>
    <Button
        android:id="@+id/btnChangeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeFragment"/>

</LinearLayout>
